--- a/party-management/src/main/resources/templates/GuestList.html
+++ b/party-management/src/main/resources/templates/GuestList.html
@@ -15,7 +15,27 @@
         <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
     </head>
     <body>
-        <h1>EAE</h1>
-    </body>
+        <div class="panel panel-default" style="margin: 10px">
+            <div class="panel-heading">
+                <h1 class="panel-title">Lista de convidados</h1>
+            </div>
 
+            <div class="panel-body">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Nome</th>
+                            <th>Acompanhantes</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="guest : ${guests}">
+                            <td th:text="${guest.name}"></td>
+                            <td th:text="${guest.accompanyingQuantity}"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </body>
 </html>
