--- a/party-management/src/main/resources/templates/GuestList.html
+++ b/party-management/src/main/resources/templates/GuestList.html
@@ -19,8 +19,15 @@
             <div class="panel-heading">
                 <h1 class="panel-title">Lista de convidados</h1>
             </div>
-
             <div class="panel-body">
+                <form class="form-inline" method="POST" th:object="${guest}" th:action="@{/guests}" style="margin: 20px 0">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Nome" th:field="*{name}"/>
+                        <input type="text" class="form-control" placeholder="Acompanhantes" th:field="*{accompanyingQuantity}"/>
+                        <button type="submit" class="btn btn-primary">Adicionar</button>
+                    </div>
+                </form>
+
                 <table class="table">
                     <thead>
                         <tr>
